# Dependencies

./: .gitignore  .gitmodules  Archive.bat  BuildAll.bat  CMakeLists.txt  Clean.bat  Common.cmake  Compile.bat  Configure.bat  Configure_VS2010.bat  Configure_VS2010_x64.bat  Configure_VS2015.bat  Configure_VS2015_XP.bat  Configure_VS2015_XP_x64.bat  Configure_VS2015_x64.bat  Configure_VS2017.bat  Configure_VS2017_XP.bat  Configure_VS2017_XP_x64.bat  Configure_VS2017_x64.bat  Configure_VS2019.bat  Configure_VS2019_XP.bat  Configure_VS2019_XP_x64.bat  Configure_VS2019_x64.bat  Linux_x64.sh  README.md  VS2010.bat  VS2010_x64.bat  VS2015.bat  VS2015_XP.bat  VS2015_XP_x64.bat  VS2015_x64.bat  VS2017.bat  VS2017_XP.bat  VS2017_XP_x64.bat  VS2017_x64.bat  VS2019.bat  VS2019_XP.bat  VS2019_XP_x64.bat  VS2019_x64.bat
Installer/: Installer.nsi
Projects/: CMakeLists.txt
Projects/MinHook/: CMakeLists.txt
Projects/RakNet/: CMakeLists.txt
Projects/RakNet-4.081/: CMakeLists.txt
Projects/RakNet/Source/: DynDNS.h  FileList.cpp  FullyConnectedMesh2.cpp  MessageFilter.cpp  NatPunchthroughClient.cpp  NatTypeDetectionClient.cpp  NatTypeDetectionServer.cpp  PacketLogger.cpp  RakNetCommandParser.cpp  RakNetDefinesOverrides.h  RakPeer.cpp  Router2.cpp  TCPInterface.cpp  UDPProxyClient.cpp  UDPProxyCoordinator.cpp
Projects/RmlUi/: CMakeLists.txt
Projects/RmlUi-4.3/: CMakeLists.txt
Projects/RmlUi/Source/Core/: DecoratorGradient.cpp
Projects/SDL/: CMakeLists.txt
Projects/SDL-2.0.8/: CMakeLists.txt
Projects/SDL-2.0.8/src/include/: SDL_config_windows.h  SDL_thread.h
Projects/SDL-2.0.8/src/src/: SDL_assert.c
Projects/SDL-2.0.9/: CMakeLists.txt
Projects/SDL/src/include/: SDL_config_windows.h  SDL_thread.h  begin_code.h
Projects/SDL/src/src/dynapi/: SDL_dynapi.h
Projects/SDL/src/src/thread/: SDL_thread.c
Projects/SDL2Net/: CMakeLists.txt
Projects/asmjit/: CMakeLists.txt
Projects/asmjit-1.0.0/: CMakeLists.txt
Projects/bass/: CMakeLists.txt  VERSION
Projects/bass-2.4.13.8/: CMakeLists.txt  VERSION
Projects/bass/src/c/3dtest/: 3dtest.c
Projects/bass/src/c/basstest/: basstest.vcxproj  makefile
Projects/bass/src/c/modtest/: makefile  modtest.vcxproj
Projects/bass/src/c/plugins/: makefile  plugins.vcxproj
Projects/bass/src/c/spectrum/: spectrum.c
Projects/bass/src/delphi/: bass.pas
Projects/bass/src/vb/3Dtest/: prj3Dtest.vbp
Projects/bass/src/vb/BASStest/: prjBassTest.vbp
Projects/bass/src/vb/CustLoop/: prjCustLoop.vbp
Projects/bass/src/vb/DSPtest/: prjDSPtest.vbp
Projects/bsdiff/: CMakeLists.txt
Projects/bsdiff/src/: bsdiff.h  bspatch.h
Projects/bzip2/: CMakeLists.txt  version.rc
Projects/cairo/: CMakeLists.txt
Projects/cairo/include/: cairo-features.h
Projects/cairo/src/src/: cairoint.h
Projects/curl/: CMakeLists.txt  VERSION
Projects/curl-7.57.0/: CMakeLists.txt
Projects/curl/src/lib/: curl_config.h
Projects/curl/src/winbuild/: README.md
Projects/discord-rpc/: CMakeLists.txt
Projects/discord-rpc-3.3.0/: CMakeLists.txt
Projects/enet/: CMakeLists.txt
Projects/enet-1.3.3/: CMakeLists.txt
Projects/enet-1.3.3/src/: unix.c  win32.c
Projects/enet/src/: host.c  protocol.c
Projects/flac/: CMakeLists.txt
Projects/flac-1.3.2/: CMakeLists.txt
Projects/fmod-1.8.3/: CMakeLists.txt
Projects/freetype/: CMakeLists.txt
Projects/freetype-2.8.1/: CMakeLists.txt
Projects/glew/: CMakeLists.txt
Projects/glew-1.2.3.4/: CMakeLists.txt
Projects/harfbuzz/: CMakeLists.txt
Projects/jpeg/: CMakeLists.txt
Projects/jpeg-6b/: CMakeLists.txt
Projects/jpeg-6b/include/: jconfig.h
Projects/libressl/: CMakeLists.txt  crypto_p.def
Projects/libressl-2.6.4/: CMakeLists.txt
Projects/libressl/src/: Makefile.in  configure
Projects/libressl/src/apps/: Makefile.in
Projects/libressl/src/crypto/: Makefile.in
Projects/libressl/src/include/: Makefile.in
Projects/libressl/src/man/: Makefile.am  Makefile.in  X509_STORE_set_verify_cb_func.3
Projects/libressl/src/ssl/: Makefile.in
Projects/libressl/src/tests/: Makefile.in
Projects/libressl/src/tls/: Makefile.in
Projects/libzip/: CMakeLists.txt
Projects/libzip-1.5.1/: CMakeLists.txt
Projects/libzip-1.5.1/src/include/: config.h
Projects/libzip/src/: CMakeLists.txt
Projects/libzip/src/lib/: CMakeLists.txt
Projects/lua/: CMakeLists.txt
Projects/lua-5.3.4/: CMakeLists.txt
Projects/lua5.3/: CMakeLists.txt
Projects/lua5.4/: CMakeLists.txt
Projects/lzma/: 7z.def  CMakeLists.txt
Projects/lzma-18.01/: CMakeLists.txt  resource.rc
Projects/md5/: CMakeLists.txt  md5.def
Projects/md5/include/: md5.h
Projects/md5/src/: md5.c
Projects/mongoose/: CMakeLists.txt
Projects/mongoose-6.10/: CMakeLists.txt
Projects/mongoose-6.10/include/: mongoose.h
Projects/mongoose-6.10/src/: mongoose.c
Projects/mongoose/include/: mongoose.h
Projects/mongoose/src/: mongoose.c
Projects/mongoose6/: CMakeLists.txt
Projects/mongoose6/include/mongoose6/: mongoose.h
Projects/mongoose6/src/: mongoose.c
Projects/mongoose7/: CMakeLists.txt
Projects/ogg/: CMakeLists.txt
Projects/ogg-1.3.3/: CMakeLists.txt
Projects/ogg/include/ogg/: config_types.h
Projects/pcre2/: CMakeLists.txt  VERSION
Projects/pcre2-10.31-prerelease/: CMakeLists.txt
Projects/pixman/: CMakeLists.txt
Projects/png/: CMakeLists.txt
Projects/png-1.6.24/: CMakeLists.txt
Projects/rapidjson-1.1.0/: CMakeLists.txt
Projects/sqlite/: CMakeLists.txt
Projects/sqlite-3.22.0/: CMakeLists.txt
Projects/sqstdlib/: CMakeLists.txt
Projects/sqstdlib-3.1/: CMakeLists.txt
Projects/sqstdlib/src/: sqstdrex.cpp
Projects/squirrel/: CMakeLists.txt
Projects/squirrel-3.1/: CMakeLists.txt
Projects/squirrel-3.1/include/: squirrel.h
Projects/squirrel/src/: sqapi.cpp  sqpcheader.h
Projects/stdbool/: stdbool.h
Projects/theora/: CMakeLists.txt
Projects/theora-1.1.1/: CMakeLists.txt
Projects/tinyxml/: CMakeLists.txt
Projects/tinyxml-2.6.2/: CMakeLists.txt
Projects/vorbis/: CMakeLists.txt
Projects/vorbis-1.3.6/: CMakeLists.txt
Projects/zlib/: CMakeLists.txt
Projects/zlib-1.2.11/: CMakeLists.txt
(+58 files in other folders)
