
if(MSVC)
	if(MSVC_VERSION LESS 1900)
		# Visual studio 2015 adds support for stdbool.h, add it for older versions
		include_directories("${CMAKE_CURRENT_SOURCE_DIR}/stdbool")
	endif()
endif()

include_directories("${CMAKE_CURRENT_SOURCE_DIR}/zlib-1.2.11/include")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/png-1.6.24/include")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/ogg-1.3.3/include")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/lua-5.3.4/include")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/freetype-2.8.1/include")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/squirrel-3.1/include")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/sqstdlib-3.1/include")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/tinyxml-2.6.2/include")
if(MSVC_VERSION GREATER_EQUAL 1900)
	include_directories("${CMAKE_CURRENT_SOURCE_DIR}/libressl-2.6.4/src/include")
endif()
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/libzip-1.5.1/src/include")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/rapidjson-1.1.0/include")

add_subdirectory(zlib-1.2.11)
add_subdirectory(png-1.6.24)
add_subdirectory(ogg-1.3.3)
add_subdirectory(RakNet-4.081)
add_subdirectory(lua-5.3.4)
add_subdirectory(freetype-2.8.1)
add_subdirectory(squirrel-3.1)
add_subdirectory(sqstdlib-3.1)
add_subdirectory(tinyxml-2.6.2)
add_subdirectory(asmjit-1.0.0)
if(MSVC_VERSION GREATER_EQUAL 1900)
	add_subdirectory(discord-rpc-3.3.0)
	add_subdirectory(libressl-2.6.4)
endif()
add_subdirectory(libzip-1.5.1)
add_subdirectory(rapidjson-1.1.0)
